testing for background colour- able to change it to green

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
   <head>
+    <link href=preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&family=Roboto+Condensed:wght@300&family=Zen+Antique&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>replit</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
     
   </head>
-  <body>
-    Hello world
+  <body class ="koru">
     <script src="script.js"></script>
+    <H1> Te Hapori </H1>
+    
+    <button>
   </body>
 </html>
