added div class to body links are working for fonts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <body class ="koru">
     <script src="script.js"></script>
     <H1> Te Hapori </H1>
-    
+    <div class ="buttons_links">
     <button>
+    </div>
   </body>
 </html>
