--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
   </head>
   <body class ="koru">
     <script src="script.js"></script>
+    <div class ="Main_Text">
     <H1> Te Hapori </H1>
+    </div>
+
     <div class ="buttons_links">
-    <button>
+      <button>
+        <h2><a href="AboutUs.html"> About Us </a></h2>
+      </button>
+      <button>
+        <h2><a href="Heroes.html"> Our Heroes </a></h2>
+      </button> 
+      <button>
+        <h2><a href="Submit.html"> Contact Us </a></h2>
+      </button>
     </div>
   </body>
 </html>
