changed the background to a different green with transparent image overtop. Changed the buttons design and colour to white colour

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
   </head>
   <body class ="koru">
     <script src="script.js"></script>
-    <div class ="Main_Text">
+    <div class ="Main_Text_Container">
     <H1> Te Hapori </H1>
     </div>
 
-    <div class ="buttons_links">
-      <button>
+    <div class ="buttons_container">
+      <button class="button_links">
         <h2><a href="AboutUs.html"> About Us </a></h2>
       </button>
-      <button>
+      <button class="button_links">
         <h2><a href="Heroes.html"> Our Heroes </a></h2>
       </button> 
-      <button>
-        <h2><a href="Submit.html"> Contact Us </a></h2>
+      <button class="button_links">
+       <a href="Submit.html"> <h2> Contact Us </h2></a>
       </button>
     </div>
   </body>
