15/11 - added a submit form to the Contact Us web page - have not tested it out yet. Added headers (background image of the fern) to About Us, Submit, Heroes webpages which include links on the top right to other web pages of the website. Added so when the screen width is 768px, a hamburger menu pops up instead of the links - is not working at the moment

--- a/Heroes.html
+++ b/Heroes.html
@@ -9,8 +9,7 @@
     <title>replit</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
-  
-  <body>
+    <body>
     <header class="koru_header">
       <nav class="navbar">  
     <div class="title">
@@ -30,7 +29,7 @@
     </header>
     </div>
     <div class="main_container">
-      <h2> About Us </h2>
+      <h2> Our Heroes </h2>
       <div class="AboutUs_text_box">
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
