--- a/Submit.html
+++ b/Submit.html
@@ -63,7 +63,7 @@
         
         <div>
             <textarea id="message" name="message" rows="5"></textarea>
-            <label for="message">Comments</label>
+            <label for="message">Why have you entered in this person?</label>
         </div>
         
         <div>
@@ -75,5 +75,6 @@
             <input type="submit" value="Submit" onclick="myFunction()">
         </div>   
     </form>
+    <script src="script.js"></script>
   </body>
 </html>
